Turns out the offset was set to 0 and not 100. I fixed that and also reinstated the overflow: hidden rule on the greeter breaker

--- a/css/main.css
+++ b/css/main.css
@@ -568,7 +568,7 @@ h4{
   min-height: 100vh;
   margin-bottom: 60px;
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 #greeter-breaker-h1{
